[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-cdc-gov-mcp"
version = "0.1.0"
description = "MCP Server for data.cdc.gov (Socrata)"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.3.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
data-cdc-mcp = "cdc_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cdc_mcp"]

[tool.hatch.build]
sources = ["src"]
